unpackaged/main/default/objects/Calendar_Values__c/Calendar_Values__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for the Calendar to values to populate the Program Calendar Settings on the Calendar</description>
    <label>Calendar Values</label>
</CustomObject>