unpackaged/main/default/objects/Calendar_Values__c/fields/IsData__c.field-meta.xml
<CustomField>
    <fullName>IsData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If it is Data such as from the Tags object for Brands or Territories</description>
    <inlineHelpText>If it is Data such as from the Tags object for Brands or Territories</inlineHelpText>
    <label>IsData</label>
    <type>Checkbox</type>
</CustomField>