unpackaged/main/default/objects/Calendar_Values__c/listViews/Colors.listView-meta.xml
<ListView>
    <fullName>Colors</fullName>
    <columns>NAME</columns>
    <columns>Setting__c</columns>
    <columns>Value__c</columns>
    <columns>Color_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsData__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Colors</label>
</ListView>